Wed Jul 14 22:57:14 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/URL.cc (normalizePath, path): If not case_sensitive,
	lowercase the URL. Should ensure that all URLs are appropriately
	lowercased, regardless of where they're generated.

Wed Jul 14 22:37:47 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/DB2_db.cc (OpenReadWrite, OpenRead): Add flag DB_DUP to
	database to allow storage of duplicate keys (in this case,
	words).

Tue Jul 13 15:36:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc (do_tag): Fix handling of <link> and <area>,
	to use href= instead of src=.

Mon Jul 12 22:31:48 1999  Hanno Mueller <kontakt@hanno.de>
	
	* contrib/scriptname/results.shtml: Remove unintentional $(VERSION).

Mon Jul 12 22:20:40 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc (do_tag): Cleanups suggested by Gilles, combining
	<link> and <area>, <embed> <object> and <frame> and moving <img>
	to a separate case.

Sun Jul 11 19:32:38 1999  Hanno Mueller <kontakt@hanno.de>

	* contrib/README: Add scriptname directory.

	* contrib/scriptname/*: An example of using htsearch within
	dynamic SSI pages

	* htcommon/defaults.cc: Add script_name attribute to override
	SCRIPT_NAME CGI environment variable.
	
	* htdoc/FAQ.html: Update question 4.7 based on including htsearch
	as a CGI in SSI markup.
	
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htdoc/hts_templates.html: Update based on behavior of script_name
	attribute.

	* htsearch/Display.cc: Set SCRIPT_NAME variable to attribute
	script_name if set and CGI environment variable if undefined.

Sat Jul 10 00:22:34 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Regex.cc (getWords): Anchor the match to the beginning
	of string, add regex-interpeted characters to extra_word_chars
	temporarily, and strip remaining punctuation before making a match.

Fri Jul  9 22:35:57 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
