@@ -1827,6 +1827,10 @@
 				</td>
 			  </tr>
 			</table>
+			<p><em>See also FAQ questions <a
+			href="FAQ.html#q4.8">4.8</a> and <a
+			href="FAQ.html#q4.9">4.9</a> for more
+			examples.</em></p>
 		  </dd>
 		</dl>
 	  </dd>
@@ -4039,12 +4043,25 @@
 		      <em>outfile</em> is the PostScript output of the
 		      parser. The program is supposed to convert to a
 		      variant of PostScript, which is then parsed
-		      internally. Currently, Adobe's <a
+		      internally. Currently, only Adobe's <a
 		      href="http://www.adobe.com/prodindex/acrobat/readstep.html">
-		      acroread</a> program and the pdftops program
-		      that is part of the <a
+		      acroread</a> program has been tested as a pdf_parser.<br>
+		       The pdftops program that is part of the <a
 		      href="http://www.foolabs.com/xpdf/">xpdf</a>
-		      0.80 package have been tested as pdf_parsers.
+		      0.80 package is not suitable as a pdf_parser,
+		      because its variant of PostScript is slightly
+		      different.  However, an alternative is to
+		      use xpdf's pdftotext program as a component
+		      of an <a href="#external_parsers">external
+		      parser</a> with the xpdf 0.80 package installed
+		      on your system, as described in FAQ question <a
+		      href="FAQ.html#q4.9">4.9</a>.<br>
+		       In either case, to successfully index PDF files,
+		      be sure to set the <a
+		      href="#max_doc_size">max_doc_size</a> attribute
+		      to a value larger than the size of your largest
+		      PDF file. PDF documents can not be parsed if they
+		      are truncated.
 		  </dd>
 		  <dt>
 			<em>example:</em>
@@ -6025,7 +6042,7 @@
 			At the cost of time for extra database accesses and
 			not getting the full effect of the options
 			<a href="#common_url_parts">common_url_parts</a> and
-			<a href="url_part_aliases">url_part_aliases</a>,
+			<a href="#url_part_aliases">url_part_aliases</a>,
 			read databases where some or all URLs are not
 			encoded <b>at all</b> through these options.<br>
 			Note that the database still needs to be rebuilt
@@ -6509,7 +6526,7 @@
 	  <a href="author.html">Andrew Scherpbier &lt;andrew@contigo.com&gt;</a>
 	</address>
 <!-- hhmts start -->
-Last modified: Sun Feb 14 21:51:44 EST 1999
+Last modified: Thu Jul 15 16:51:27 EDT 1999
 <!-- hhmts end -->
   </body>
 </html>
