@@ -1,3 +1,8 @@
+Thu Jul 15 15:54:30 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+	* htdoc/attrs.html(pdf_parser & external_parsers): add corrections &
+	clarifications, links to relevant FAQ entries.
+
 Wed Jul 14 22:57:14 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
 
 	* htlib/URL.cc (normalizePath, path): If not case_sensitive,
